--- a/package.json
+++ b/package.json
@@ -1,53 +1,25 @@
 {
-  "name": "intelligent-tour-guide",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.8",
-    "@mui/styled-engine-sc": "^6.1.8",
-    "@mui/x-charts": "^7.22.3",
-    "@react-google-maps/api": "^2.20.6",
-    "appwrite": "^16.0.2",
-    "axios": "^1.7.7",
-    "dayjs": "^1.11.13",
-    "formik": "^2.4.6",
-    "mui": "^0.0.1",
-    "react": "^18.3.1",
-    "react-chrono": "^2.6.1",
-    "react-chronos": "^1.0.5",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-phone-input-2": "^2.15.1",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.6",
-    "react-vertical-timeline-component": "^3.6.0",
-    "styled-components": "^6.1.13",
-    "yup": "^1.4.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9"
+    "@vitalets/google-translate-api": "^9.2.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "http-proxy-agent": "^7.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
+    "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
